<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/start"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_marginBottom="8dp"
        android:text="@string/start"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/online_test"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/start"
        android:layout_marginBottom="8dp"
        android:text="@string/online_test"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/rank"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/online_test"
        android:text="@string/rank"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>